--- a/templates/index.html
+++ b/templates/index.html
@@ -145,19 +145,19 @@
     <h1>Update Presentation</h1>
     <form action="/" method="post" enctype="multipart/form-data">
         <label for="program">Program:</label>
-        <input type="text" id="program" name="program" required><br><br>
+        <input type="text" id="program" name="program" required autocomplete="off"><br><br>
 
         <label for="project">Project:</label>
-        <input type="text" id="project" name="project" required><br><br>
+        <input type="text" id="project" name="project" required autocomplete="off"><br><br>
         
         <label for="domain">Domain:</label>
-        <input type="text" id="domain" name="domain" required><br><br>
+        <input type="text" id="domain" name="domain" required autocomplete="off"><br><br>
 
         <label for="image">Group Image (Upload Image):</label>
         <input type="file" id="image" name="image" required><br><br>
         
         <label for="guide">Name of Project Guide:</label>
-        <input type="text" id="guide" name="guide" required><br><br>
+        <input type="text" id="guide" name="guide" required autocomplete="off"><br><br>
 
         <h3>Student Information:</h3>
         <label for="num_students">Number of students:</label>
@@ -173,35 +173,35 @@
             <div class="student-field" id="student_1" style="display:none;">
                 <div class="student-header">Student 1</div>
                 <label for="roll_no_1" class="student-label">Roll No:</label>
-                <input type="text" id="roll_no_1" name="roll_no_1" class="student-input"><br>
+                <input type="text" id="roll_no_1" name="roll_no_1" class="student-input" autocomplete="off"><br>
                 <label for="student_name_1" class="student-label">Name:</label>
-                <input type="text" id="student_name_1" name="student_name_1" class="student-input">
+                <input type="text" id="student_name_1" name="student_name_1" class="student-input" autocomplete="off">
             </div>
             <div class="student-field" id="student_2" style="display:none;">
                 <div class="student-header">Student 2</div>
                 <label for="roll_no_2" class="student-label">Roll No:</label>
-                <input type="text" id="roll_no_2" name="roll_no_2" class="student-input"><br>
+                <input type="text" id="roll_no_2" name="roll_no_2" class="student-input" autocomplete="off"><br>
                 <label for="student_name_2" class="student-label">Name:</label>
-                <input type="text" id="student_name_2" name="student_name_2" class="student-input">
+                <input type="text" id="student_name_2" name="student_name_2" class="student-input" autocomplete="off">
             </div>
             <div class="student-field" id="student_3" style="display:none;">
                 <div class="student-header">Student 3</div>
                 <label for="roll_no_3" class="student-label">Roll No:</label>
-                <input type="text" id="roll_no_3" name="roll_no_3" class="student-input"><br>
+                <input type="text" id="roll_no_3" name="roll_no_3" class="student-input" autocomplete="off"><br>
                 <label for="student_name_3" class="student-label">Name:</label>
-                <input type="text" id="student_name_3" name="student_name_3" class="student-input">
+                <input type="text" id="student_name_3" name="student_name_3" class="student-input" autocomplete="off">
             </div>
             <div class="student-field" id="student_4" style="display:none;">
                 <div class="student-header">Student 4</div>
                 <label for="roll_no_4" class="student-label">Roll No:</label>
-                <input type="text" id="roll_no_4" name="roll_no_4" class="student-input"><br>
+                <input type="text" id="roll_no_4" name="roll_no_4" class="student-input" autocomplete="off"><br>
                 <label for="student_name_4" class="student-label">Name:</label>
-                <input type="text" id="student_name_4" name="student_name_4" class="student-input">
+                <input type="text" id="student_name_4" name="student_name_4" class="student-input" autocomplete="off">
             </div>
         </div>
 
         <label for="project_info">Brief Idea of Project:</label>
-        <textarea id="project_info" name="project_info" required></textarea><br><br>
+        <textarea id="project_info" name="project_info" required autocomplete="off"></textarea><br><br>
         
         <h3>Project Screenshots:</h3>
         <label for="num_screenshots">Number of screenshots:</label>
@@ -241,23 +241,23 @@
         <div class="application-fields">
             <div class="application-field" id="application_1" style="display:none;">
                 <label for="application_name_1" class="application-label">Application Name 1:</label>
-                <input type="text" id="application_name_1" name="application_name_1">
+                <input type="text" id="application_name_1" name="application_name_1" autocomplete="off">
             </div>
             <div class="application-field" id="application_2" style="display:none;">
                 <label for="application_name_2" class="application-label">Application Name 2:</label>
-                <input type="text" id="application_name_2" name="application_name_2">
+                <input type="text" id="application_name_2" name="application_name_2" autocomplete="off">
             </div>
             <div class="application-field" id="application_3" style="display:none;">
                 <label for="application_name_3" class="application-label">Application Name 3:</label>
-                <input type="text" id="application_name_3" name="application_name_3">
+                <input type="text" id="application_name_3" name="application_name_3" autocomplete="off">
             </div>
             <div class="application-field" id="application_4" style="display:none;">
                 <label for="application_name_4" class="application-label">Application Name 4:</label>
-                <input type="text" id="application_name_4" name="application_name_4">
+                <input type="text" id="application_name_4" name="application_name_4" autocomplete="off">
             </div>
             <div class="application-field" id="application_5" style="display:none;">
                 <label for="application_name_5" class="application-label">Application Name 5:</label>
-                <input type="text" id="application_name_5" name="application_name_5">
+                <input type="text" id="application_name_5" name="application_name_5" autocomplete="off">
             </div>
         </div>
         
